Добавлена логика работы с файлами: фото, видео, аудио. Созданы контроллеры для доступа к операциям с файлами. Реализация маппера. Рефакторинг кода.