@@ -6,19 +6,42 @@ import org.springframework.stereotype.Component;
 import ru.dorofeev.mobilemap.model.base.GeographicalObject;
 import ru.dorofeev.mobilemap.model.dto.AddressDto;
 import ru.dorofeev.mobilemap.model.dto.GeographicalObjectDto;
-import ru.dorofeev.mobilemap.repository.GeographicalObjectRepository;
+import ru.dorofeev.mobilemap.service.interf.AddressService;
+import ru.dorofeev.mobilemap.service.interf.AudioService;
+import ru.dorofeev.mobilemap.service.interf.DesignationService;
+import ru.dorofeev.mobilemap.service.interf.PhotoService;
+import ru.dorofeev.mobilemap.service.interf.TypeObjectService;
+import ru.dorofeev.mobilemap.service.interf.VideoService;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
 
+/**
+ * Маппер предназначенный для преобразования Entity -> DTO
+ */
 @Slf4j
 @Component
 @RequiredArgsConstructor
 public class GeographicalObjectMapper {
-    private final GeographicalObjectRepository geographicalObjectRepository;
+    private final String ENDPOINT_GET_PHOTO_BY_ID = "http://localhost:8080/api/v1/photo/";
+    private final String ENDPOINT_GET_VIDEO_BY_ID = "http://localhost:8080/api/v1/video/";
+    private final String ENDPOINT_GET_AUDIO_BY_ID = "http://localhost:8080/api/v1/audio/";
+    private final String ENDPOINT_GET_DESIGNATION_BY_ID = "http://localhost:8080/api/v1/designation/";
+    private final PhotoService photoService;
+    private final VideoService videoService;
+    private final AudioService audioService;
+    private final TypeObjectService typeObjectService;
+    private final AddressService addressService;
+    private final DesignationService designationService;
 
+    /**
+     * Метод преобразующий список geo-объектов в DTO
+     *
+     * @param geographicalObjectList список geo-объектов.
+     * @return список dto.
+     */
     public List<GeographicalObjectDto> toDtoList(List<GeographicalObject> geographicalObjectList) {
         if (geographicalObjectList == null) {
             return Collections.emptyList();
@@ -33,62 +56,150 @@ public class GeographicalObjectMapper {
         return result;
     }
 
+    /**
+     * Метод преобразующий список DTO-объектов в geo-объекты
+     *
+     * @param geographicalObjectDtoList список dto-объектов.
+     * @return список geo-объектов.
+     */
     public List<GeographicalObject> toEntityList(List<GeographicalObjectDto> geographicalObjectDtoList) {
-        return List.of();
+        if (geographicalObjectDtoList == null) {
+            return Collections.emptyList();
+        }
+
+        List<GeographicalObject> result = new ArrayList<>(geographicalObjectDtoList.size());
+
+        for (var item : geographicalObjectDtoList) {
+            result.add(toEntity(item));
+        }
+
+        return result;
     }
 
+    /**
+     * Метод преобразующий geo-объект в DTO
+     *
+     * @param geographicalObject объект, который подлежит преобразованию.
+     * @return DTO-объект.
+     */
     public GeographicalObjectDto toDto(GeographicalObject geographicalObject) {
-
-        String currentRegion = geographicalObject.getAddress().getRegion().getName();
-
-        String currentTypeLocality = geographicalObject.getAddress().getTypeLocality().getName();
-
-        String currentLocality = geographicalObject.getAddress().getLocality().getName();
-
-        String currentStreet = geographicalObject.getAddress().getStreet().getName();
-
-        String currentDistrict = geographicalObject.getAddress().getDistrict() == null ?
-                "Отсутствует" : geographicalObject.getAddress().getDistrict().getName();
-
-        String currentHouseNumber = geographicalObject.getAddress().getHouseNumber() == null ?
-                "Отсутствует" : geographicalObject.getAddress().getHouseNumber();
+        String currentRegion = "Отсуствует";
+        String currentTypeLocality = "Отсуствует";
+        String currentLocality = "Отсуствует";
+        String currentStreet = "Отсуствует";
+        String currentDistrict = "Отсуствует";
+        String currentHouseNumber = "Отсуствует";
 
 
+        if (geographicalObject.getAddress() != null) {
+            currentRegion = geographicalObject.getAddress().getRegion().getName();
+            currentTypeLocality = geographicalObject.getAddress().getTypeLocality().getName();
+            currentLocality = geographicalObject.getAddress().getLocality().getName();
+            currentStreet = geographicalObject.getAddress().getStreet().getName();
+            currentDistrict = geographicalObject.getAddress().getDistrict().getName();
+            currentHouseNumber = geographicalObject.getAddress().getHouseNumber();
+        }
 
-        return GeographicalObjectDto.builder()
-                .name(geographicalObject.getName())
-                .type(geographicalObject.getType().getName())
-                .latitude(geographicalObject.getLatitude())
-                .longitude(geographicalObject.getLongitude())
-                .description(geographicalObject.getDescription())
-                .note(geographicalObject.getNote())
-                .designation(geographicalObject.getDesignation().getUrl())
-                .addressDto(AddressDto.builder()
-                        .region(currentRegion)
-                        .typeLocality(currentTypeLocality)
-                        .locality(currentLocality)
-                        .street(currentStreet)
-                        .district(currentDistrict)
-                        .houseNumber(currentHouseNumber)
-                        .fullAddress(
-                                getFullAddress(currentRegion,
-                                currentDistrict,
-                                currentTypeLocality,
-                                currentLocality,
-                                currentStreet,
-                                currentHouseNumber)
-                        )
-                        .build())
-                .photoList(null)
-                .videoList(null)
-                .audioList(null)
-                .build();
+        GeographicalObjectDto geographicalObjectDto = new GeographicalObjectDto();
+        geographicalObjectDto.setName(geographicalObject.getName());
+        geographicalObjectDto.setType(geographicalObject.getType().getName());
+        geographicalObjectDto.setLatitude(geographicalObject.getLatitude());
+        geographicalObjectDto.setLongitude(geographicalObject.getLongitude());
+        geographicalObjectDto.setDescription(geographicalObject.getDescription());
+        geographicalObjectDto.setNote(geographicalObject.getNote());
+        geographicalObjectDto.setDesignation(String.format("%s%s", ENDPOINT_GET_DESIGNATION_BY_ID, geographicalObject.getDesignation().getId()));
+
+        if (geographicalObject.getAddress() != null) {
+            geographicalObjectDto.setAddressDto(AddressDto.builder()
+                    .region(currentRegion)
+                    .typeLocality(currentTypeLocality)
+                    .locality(currentLocality)
+                    .street(currentStreet)
+                    .district(currentDistrict)
+                    .houseNumber(currentHouseNumber)
+                    .fullAddress(
+                            getFullAddress(currentRegion,
+                                    currentDistrict,
+                                    currentTypeLocality,
+                                    currentLocality,
+                                    currentStreet,
+                                    currentHouseNumber)
+                    )
+                    .build());
+        } else {
+            //Адрес может быть null, т.к. он не всегда нужен
+            // или в прицнипе есть у географического объекта.
+            geographicalObjectDto.setAddressDto(null);
+        }
+        geographicalObjectDto.setPhotoList(
+                photoService.findAllFilesByGeographicalObjectId(geographicalObject.getId()).stream()
+                        .map(el -> String.format("%s%s", ENDPOINT_GET_PHOTO_BY_ID, el.getId()))
+                        .collect(Collectors.toList())
+        );
+        geographicalObjectDto.setVideoList(
+                videoService.findAllFilesByGeographicalObjectId(geographicalObject.getId()).stream()
+                        .map(el -> String.format("%s%s", ENDPOINT_GET_VIDEO_BY_ID, el.getId()))
+                        .collect(Collectors.toList())
+        );
+        geographicalObjectDto.setAudioList(
+                audioService.findAllFilesByGeographicalObjectId(geographicalObject.getId()).stream()
+                        .map(el -> String.format("%s%s", ENDPOINT_GET_AUDIO_BY_ID, el.getId()))
+                        .collect(Collectors.toList())
+        );
+
+        return geographicalObjectDto;
     }
 
+    /**
+     * Метод преобразующий DTO-объекты в geo.
+     *
+     * @param geographicalObjectDto объект, который подлежит преобразованию.
+     * @return geo-объект.
+     */
     public GeographicalObject toEntity(GeographicalObjectDto geographicalObjectDto) {
-        return null;
+
+        GeographicalObject geographicalObject = new GeographicalObject();
+
+        geographicalObject.setType(typeObjectService.getTypeObjectByName(geographicalObjectDto.getType()));
+        geographicalObject.setName(geographicalObjectDto.getName());
+        geographicalObject.setLatitude(geographicalObjectDto.getLatitude());
+        geographicalObject.setLongitude(geographicalObjectDto.getLongitude());
+        geographicalObject.setDescription(geographicalObjectDto.getDescription());
+        geographicalObject.setNote(geographicalObjectDto.getNote());
+        geographicalObject.setDesignation(designationService.getDesignationByName(geographicalObjectDto.getDesignation()));
+
+        if (geographicalObjectDto.getAddressDto() == null) {
+            geographicalObject.setAddress(null);
+        } else {
+            geographicalObject.setAddress(
+                    addressService.getAddress(
+                            geographicalObjectDto.getAddressDto().getRegion(),
+                            geographicalObjectDto.getAddressDto().getDistrict(),
+                            geographicalObjectDto.getAddressDto().getTypeLocality(),
+                            geographicalObjectDto.getAddressDto().getLocality(),
+                            geographicalObjectDto.getAddressDto().getStreet(),
+                            geographicalObjectDto.getAddressDto().getHouseNumber())
+            );
+        }
+
+        return geographicalObject;
     }
 
+    /**
+     * Метод позволяющий получить полный адрес географического объекта.
+     * <p>
+     * Формат: Регион, Район, тип местности Местность, Улица, Номер
+     * <p>
+     * Пример: Алтайский край, Железнодорожный район, Город Барнаул, Ленина, 61
+     *
+     * @param region       Регион
+     * @param district     Район
+     * @param typeLocality Тип местности
+     * @param locality     Местность
+     * @param street       Улица
+     * @param houseNumber  Номер дома
+     * @return Полный адрес, зависящий от наличия передаваемых параметров.
+     */
     private String getFullAddress(String region, String district, String typeLocality, String locality, String street, String houseNumber) {
 
         StringBuilder result = new StringBuilder();
@@ -103,13 +214,16 @@ public class GeographicalObjectMapper {
 
         result.append(typeLocality)
                 .append(" ")
-                .append(locality)
-                .append(", ")
-                .append(street);
+                .append(locality);
 
-        if (!houseNumber.equals("Отсутствует")) {
+        if (!street.equals("Отсутствует")) {
             result.append(", ")
-                    .append(houseNumber);
+                    .append(street);
+
+            if (!houseNumber.equals("Отсутствует")) {
+                result.append(", ")
+                        .append(houseNumber);
+            }
         }
 
         return result.toString();
